--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="logo">Dashboard Perolehan Suara Partai Politik Dapil Provinsi Bali Pemilu 2024</div>
     <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
     <ul class="menu">
-        <li><a href="https:/rickyig.github.io/dashboard-pemilu-Bali-2024/">Home</a></li>
+        <li><a href="https://rickyig.github.io/dashboard-pemilu-Bali-2024/">Home</a></li>
         <li><a href="https://rickyig.github.io/muka-peta-pemilu-Bali/">See Fullscreen Map</a></li>
         <li><a href="https://instagram.com/rickyindrag">Contact</a></li>
     </ul>
